ax/.gui/new_prototype/shares/s4122485/OneClassDriftDetector_OutdoorObjects/0/2287075_0_log.out
submitit INFO (2024-09-28 19:35:13,385) - Starting with JobEnvironment(job_id=2287075, hostname=i7186, local_rank=0(1), node=0(1), global_rank=0(1))
submitit INFO (2024-09-28 19:35:13,388) - Loading pickle: /data/horse/ws/s4122485-compPerfDD/benchmark/dfki/unsupervised-concept-drift-detection-main/runs/OneClassDriftDetector_OutdoorObjects/0/single_runs/2287075/2287075_submitted.pkl
Parameters: {"n_samples": 317, "threshold": 0.24225679542869333, "outlier_detector_kwargs": "{'nu':0.5,'kernel':'rbf','gamma':'auto'}"}
Debug-Infos: 
========
DEBUG INFOS START:
Program-Code: module load GCCcore/10.3.0 Python && source /data/horse/ws/s4122485-compPerfDD/benchmark/venv/bin/activate && python main_omniopt.py OutdoorObjects 1000 OneClassDriftDetector n_samples 317 threshold 0.24225679542869333 outlier_detector_kwargs {'nu':0.5,'kernel':'rbf','gamma':'auto'}
pwd: /data/horse/ws/s4122485-compPerfDD/benchmark/dfki/unsupervised-concept-drift-detection-main
File: /data/horse/ws/s4122485-compPerfDD/benchmark/venv/bin/activate
UID: 2063769
GID: 200270
Status-Change-Time: 1724762786.0
Size: 2165 Bytes
Permissions: -rw-r--r--
Owner: s4122485
Last access: 1727544756.0
Last modification: 1724759185.0
Hostname: i7186
pwd: /data/horse/ws/s4122485-compPerfDD/benchmark/dfki/unsupervised-concept-drift-detection-main
File: main_omniopt.py
UID: 2063769
GID: 200270
Status-Change-Time: 1727277242.0
Size: 1729 Bytes
Permissions: -rw-r--r--
Owner: s4122485
Last access: 1727544758.0
Last modification: 1727277242.0
Hostname: i7186
========
DEBUG INFOS END

module load GCCcore/10.3.0 Python && source /data/horse/ws/s4122485-compPerfDD/benchmark/venv/bin/activate && python main_omniopt.py OutdoorObjects 1000 OneClassDriftDetector n_samples 317 threshold 0.24225679542869333 outlier_detector_kwargs {'nu':0.5,'kernel':'rbf','gamma':'auto'}
Error at execution of your program: module load GCCcore/10.3.0 Python && source 
/data/horse/ws/s4122485-compPerfDD/benchmark/venv/bin/activate && python 
main_omniopt.py OutdoorObjects 1000 OneClassDriftDetector n_samples 317 
threshold 0.24225679542869333 outlier_detector_kwargs 
{'nu':0.5,'kernel':'rbf','gamma':'auto'}. Exit-Code: 1, Signal-Code: None
No stdout
stderr: 
Inaktive Module:
  1) PostgreSQL/14.4     4) X11/20220504          7) freetype/2.12.1
  2) Tk/8.6.12           5) expat/2.4.8           8) util-linux/2.38
  3) Tkinter/3.10.4      6) fontconfig/2.14.0

Wegen Änderungen an MODULEPATH wurden folgende Module erneut geladen:
  1) Brotli/1.0.9     3) XZ/5.2.5        5) libpciaccess/0.16     7) 
xorg-macros/1.19.3
  2) GMP/6.2.1        4) bzip2/1.0.8     6) libpng/1.6.37

Die folgenden Module wurden in einer anderen Version erneut geladen:
  1) GCCcore/11.3.0 => GCCcore/10.3.0     6) libffi/3.4.2 => libffi/3.3
  2) Python/3.10.4 => Python/3.9.5        7) libreadline/8.1.2 => 
libreadline/8.1
  3) SQLite/3.38.3 => SQLite/3.35.4       8) ncurses/6.3 => ncurses/6.2
  4) Tcl/8.6.12 => Tcl/8.6.11             9) zlib/1.2.12 => zlib/1.2.11
  5) binutils/2.38 => binutils/2.36.1

Modules GCCcore/11.3.0, zlib/1.2.12, bzip2/1.0.8, ncurses/6.3, Tcl/8.6.12, 
GMP/6.2.1, binutils/2.38, libreadline/8.1.2, SQLite/3.38.3, XZ/5.2.5, 
libffi/3.4.2, Python/3.10.4, expat/2.4.8, libpng/1.6.37, Brotli/1.0.9, 
freetype/2.12.1, util-linux/2.38, fontconfig/2.14.0, xorg-macros/1.19.3, 
libpciaccess/0.16, X11/20220504, Tk/8.6.12, Tkinter/3.10.4, PostgreSQL/14.4 and 
5 dependencies unloaded.
Modules zlib/1.2.12, bzip2/1.0.8, ncurses/6.3, binutils/2.38, GCCcore/10.3.0, 
zlib/1.2.12, bzip2/1.0.8, ncurses/6.3, GMP/6.2.1, OpenSSL/1.1, binutils/2.38, 
XZ/5.2.5, libpng/1.6.37, Brotli/1.0.9, xorg-macros/1.19.3, libpciaccess/0.16, 
Python/3.9.5 and 7 dependencies loaded.
Traceback (most recent call last):
  File 
"/data/horse/ws/s4122485-compPerfDD/benchmark/dfki/unsupervised-concept-drift-de
tection-main/main_omniopt.py", line 39, in <module>
    dd = eval(mystr)
  File "<string>", line 1
    OneClassDriftDetector(n_samples=317, threshold=0.24225679542869333, 
outlier_detector_kwargs=nu:0.5, kernel:rbf=gamma:auto, )
                                                                                
                  ^
SyntaxError: invalid syntax

stdout:

Result: None
EXIT_CODE: 1
submitit INFO (2024-09-28 19:35:18,971) - Job completed successfully
submitit INFO (2024-09-28 19:35:18,974) - Exiting after successful completion
